Circle deploy: add flask_secret_key file
fixes https://console.cloud.google.com/errors/detail/CNHp0eSz84vlyQE;time=P30D?project=bridgy-federated

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,8 @@ jobs:
           name: Deploy
           command: |
             echo $$CIRCLE_BRANCH
-            if [ $CIRCLE_BRANCH = "main" ]; then
+            if [ $CIRCLE_BRANCH = "deploy" ]; then
+              echo $FLASK_SECRET_KEY > flask_secret_key
               echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
               gcloud -q beta app deploy --no-cache --project bridgy-federated *.yaml
             fi
