--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           command: |
             CLOUDSDK_CORE_PROJECT=bridgy-federated gcloud beta emulators datastore start --no-store-on-disk --use-firestore-in-datastore-mode --host-port=localhost:8089 < /dev/null >& /dev/null &
             sleep 5s
-            python -m coverage run --source=. --omit=appengine_config.py,logs.py,tests/\* -m unittest discover -v
+            python -m coverage run --source=. --omit=appengine_config.py,logs.py,tests/\* -m unittest discover
             python -m coverage html -d /tmp/coverage_html
             if [ "$COVERALLS_REPO_TOKEN" != "" ]; then coveralls || true; fi
 
